syntax = "proto3";

package nats;
option go_package = "./natspb";

message CreationRequest {
  string runtime_id = 1;
  string version_name = 2;
  repeated Workflow workflows = 3;
}

message DeleteStreamsRequest {
  string runtime_id = 1;
  string version_name = 2;
  repeated string workflows = 3;
}

message DeleteResponse {
  string message = 1;
}

message Workflow {
  string name = 1;
  string entrypoint = 2;
  repeated Node nodes = 3;
}

message Node {
  enum ObjectStoreScope{
    SCOPE_WORKFLOW = 0;
    SCOPE_PROJECT = 1;
  }

  message ObjectStore {
    string name = 1;
    ObjectStoreScope scope = 2;
  }

  string name = 1;
  repeated string subscriptions = 2;
  optional ObjectStore object_store = 3;
}

message CreateStreamResponse {
  message NodeStreamConfig {
    string subject = 1;
    repeated string subscriptions = 2;
  }

  message WorkflowStreamConfig {
    string stream = 1;
    map<string, NodeStreamConfig> nodes = 2;
  }

  map<string, WorkflowStreamConfig> workflows = 1;
}

message CreateObjectStoreResponse {
  message NodeObjectStoreConfig {
    string object_store = 1;
  }

  message WorkflowObjectStoreConfig {
    map<string, NodeObjectStoreConfig> nodes = 1;
  }

  map<string, WorkflowObjectStoreConfig> workflows = 1;
}


service NatsManagerService {
  rpc CreateStreams (CreationRequest) returns (CreateStreamResponse);
  rpc CreateObjectStores (CreationRequest) returns (CreateObjectStoreResponse);
  rpc DeleteStreams (DeleteStreamsRequest) returns (DeleteResponse);
};
