syntax = "proto3";

package monitoring;
option go_package = "monitoringpb";

message NodeLogsRequest {
  string search = 1;
  string versionID = 2;
  repeated string nodeIDs = 3;
  repeated string levels = 4;
}

message NodeLogsResponse {
  string id = 1;
  string date = 2;
  string level = 3;
  string message = 4;
  string nodeId = 5;
  string nodeName = 6;
  string workflowId = 7;
  string workflowName = 8;
}

message NodeStatusRequest {
  string versionName = 2;
}

message NodeStatusResponse {
  string nodeId = 1;
  string status = 2;
  string name = 3;
}

message SearchLogsRequest {
  string search = 1;
  string startDate = 2;
  string endDate = 3;
  string versionID = 4;
  repeated string nodeIDs = 5;
  repeated string levels = 6;
  string cursor = 7;
}

message SearchLogsResponse {
  string cursor = 1;
  repeated NodeLogsResponse logs = 2;
}

message GetMetricsRequest {
  string versionID = 1;
  string startDate = 2;
  string endDate = 3;
}

message MetricRow {
  string date = 1;
  string error = 2;
  string predicted_value = 3;
  string true_value = 4;
}

message GetMetricsResponse {
  repeated MetricRow metrics = 1;
}

service MonitoringService {
  rpc NodeLogs (NodeLogsRequest) returns (stream NodeLogsResponse);
  rpc NodeStatus (NodeStatusRequest) returns (stream NodeStatusResponse);
  rpc SearchLogs (SearchLogsRequest) returns (SearchLogsResponse);
  rpc GetMetrics (GetMetricsRequest) returns (GetMetricsResponse);
};
